<resources>
    <string name="app_name" translatable="false">Map</string>

    <!-- Strings used for fragments for navigation -->
    <string name="levels_fragment_label" translatable="false">Levels Fragment</string>
    <string name="pois_fragment_label" translatable="false">POIs Fragment</string>
    <string name="navigation_fragment_label" translatable="false">Navigation Fragment</string>
    <string name="settings_fragment_label" translatable="false">Settings Fragment</string>
    <string name="initial_fragment_label" translatable="false">Initial Fragment</string>
    <string name="samples_fragment_label" translatable="false">Samples Fragment</string>
    <string name="pois_list_fragment_label" translatable="false">Pois List Fragment</string>
    <string name="load_map" translatable="false">Load Map</string>
    <string name="navigation_placeholder" translatable="false">Navigation info will be here</string>

    <string name="apply_filter" translatable="false">Apply filter</string>
    <string name="remove_filters" translatable="false">Remove filters</string>
    <string name="start_navigation_user_position" translatable="false">Start navigation from simulated user position</string>
    <string name="start_navigation" translatable="false">Start navigation</string>
    <string name="stop_navigation" translatable="false">Stop navigation</string>
    <string name="remove_user_position" translatable="false">Remove simulated user position</string>
    <string name="enable_selection" translatable="false">Enable selection</string>
    <string name="disable_selection" translatable="false">Disable selection</string>

    <string name="start_navigation_user_created_annotations" translatable="false">Start navigation from user-created annotations</string>
    <string name="remove_user_created_annotations" translatable="false">Remove user-created annotations</string>

    <string name="first_poi" translatable="false">Relay (shop)</string>
    <string name="second_poi" translatable="false">Etam lingerie</string>

    <!-- Preference -->
    <string name="preferences">Preferences</string>

    <!-- Preference Groups -->
    <string name="global_preferences">Global</string>
    <string name="navigation_preferences">Navigation</string>

    <!-- Global Preferences -->
    <string name="visual_debugger_title">Enable visual debugger</string>
    <string name="switch_levels_title">Switch levels automatically on user movements</string>
    <string name="recalculate_itinerary_title">Recalculate itinerary if user is far from itinerary</string>
    <string name="user_location_projection_title">Project user location on itinerary</string>

    <!-- Navigation Preferences -->
    <string name="stop_distance_threshold_title">Stop distance threshold</string>
    <string name="stop_distance_threshold_summary">The distance measured in meters, indicating when the navigation manager considers that the user has arrived at the final destination. Default is 5 meters</string>

    <string name="user_position_threshold_title">User position threshold</string>
    <string name="user_position_threshold_summary">The distance measured in meters indicates when the user\'s location will no longer be projected onto the itinerary and navigation will be recalculated. Default is 5 meters</string>

    <string name="navigation_recalculation_time_interval_title">Navigation recalculation time interval</string>
    <string name="navigation_recalculation_time_interval_summary">The navigation recalculation time interval, measured in seconds, indicates the interval between consecutive navigation recalculations. An interval of less than 5 seconds is forbidden. Default is 5 seconds</string>

</resources>