<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/global_preferences">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="SWITCH_LEVELS_AUTOMATICALLY_ON_USER_MOVEMENTS"
            app:title="@string/switch_levels_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/navigation_preferences">

        <EditTextPreference
            app:defaultValue="5"
            app:dialogMessage="@string/stop_distance_threshold_summary"
            app:key="STOP_DISTANCE_THRESHOLD"
            app:title="@string/stop_distance_threshold_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="5"
            app:dialogMessage="@string/user_position_threshold_summary"
            app:key="USER_POSITION_THRESHOLD"
            app:title="@string/user_position_threshold_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="5"
            app:dialogMessage="@string/navigation_recalculation_time_interval_summary"
            app:key="NAVIGATION_RECALCULATION_TIME_INTERVAL"
            app:title="@string/navigation_recalculation_time_interval_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>